<resources>
    <string name="app_name">Calculator</string>
    <string name="AC">AC</string>
    <string name="bacai">+/-</string>
    <string name="phantram">%</string>
    <string name="Chia">/</string>
    <string name="bay">7</string>
    <string name="tam">8</string>
    <string name="chin">9</string>
    <string name="nhan">X</string>
    <string name="bon">4</string>
    <string name="nam">5</string>
    <string name="sau">6</string>
    <string name="tru">-</string>
    <string name="mot">1</string>
    <string name="hai">2</string>
    <string name="ba">3</string>
    <string name="cong">+</string>
    <string name="khong">0</string>
    <string name="phay">,</string>
    <string name="bang">=</string>
    <string name="Nhapdulieu">0</string>
</resources>