<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="390dp"
        android:layout_height="382dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                android:onClick="AC"
                android:text="@string/AC"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                android:onClick="bacai"
                android:text="@string/bacai"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                android:onClick="phantram"
                android:text="@string/phantram"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dau_button"
                android:onClick="chia"
                android:text="@string/Chia"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="bay"
                android:text="@string/bay"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="tam"
                android:text="@string/tam"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="chin"
                android:text="@string/chin"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dau_button"
                android:onClick="nhan"
                android:text="@string/nhan"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="bon"
                android:text="@string/bon"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="nam"
                android:text="@string/nam"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="sau"
                android:text="@string/sau"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dau_button"
                android:onClick="tru"
                android:text="@string/tru"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="mot"
                android:text="@string/mot"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="hai"
                android:text="@string/hai"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="ba"
                android:text="@string/ba"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dau_button"
                android:onClick="cong"
                android:text="@string/cong"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="khong"
                android:text="@string/khong"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="phay"
                android:text="@string/phay"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/maucuaso_button"
                android:onClick="bang"
                android:text="@string/bang"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="392dp"
        android:layout_height="0dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="4dp"
        android:gravity="right"
        android:text="@string/Nhapdulieu"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>